creazione 3 box nel main

--- a/index.html
+++ b/index.html
@@ -8,6 +8,58 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <header>
+        <div class="container-nav">
+            <nav>
+               <div>
+                <span>logo</span>
+               </div>
+               <div>
+                <span>link</span>
+                <span>link</span>
+                <span>link</span>
+                <span>link</span>
+                <span>link</span>
+               </div>
+               <div>
+                <span>login</span>
+               </div>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div class="container blu">
+            <div class="box-piccolo">
+            </div>
+        </div>
+
+        <div class="container bianco ">
+            <div class="box">
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+
+        <div class="container grigio ">
+            <div class="box reverse">
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+
+        <div class="container bianco ">
+            <div class="box">
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+
+
+
+
+    </main>
     
 </body>
 </html>
