creazione ultimo box footer

--- a/index.html
+++ b/index.html
@@ -78,6 +78,19 @@
             </div>
         </div>
 
+        <div class="container-footer black">
+            <div class="box-footer">
+                <div>
+                    <span>logo</span>
+                </div>
+                <div>
+                    <span>bottone</span>
+                </div>
+
+            </div>
+
+        </div>
+
         
 
 
