correzione selettore nthchild() con classe

--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
 
         <div class="container bianco ">
             <div class="box">
-                <div></div>
-                <div></div>
+                <div class="grow-2"></div>
+                <div class="grow-1"></div>
             </div>
         </div>
 
         <div class="container grigio ">
             <div class="box reverse">
-                <div></div>
-                <div></div>
+                <div class="grow-2"></div>
+                <div class="grow-1"></div>
             </div>
         </div>
 
         <div class="container bianco ">
             <div class="box">
-                <div></div>
-                <div></div>
+                <div class="grow-2"></div>
+                <div class="grow-1"></div>
             </div>
         </div>
 
