--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <div>3</div>
                     <div>4</div>
                 </div>
-                <div style="flex-grow: 1; background-color: rgb(188, 117, 182);"></div>
+                <div class="grow-1" ></div>
                 
                 
             </div>
