--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <footer>
         <div class="container black ">
             <div class="box reverse">
-                <div class="box-4elementi">
+                <div class="box-4elementi grow-2">
                     <div>1</div>
                     <div>2</div>
                     <div>3</div>
